test/T3/Pass/arrayLength.ic
class A
{
	static void main(string[] args)
	{
		int[] a;
		int foo = a.length;
	}
}