test/T3/Fail/WrongMainSig.ic

class A
{
	int x;
}

class B
{
	static void main(string[] args, int k)
	{
		Library.println("hello");
	}
}